--- a/index.html
+++ b/index.html
@@ -1,45 +1,236 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>About me</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
 
 </head>
-
 <body>
-    <div id="home">
-        <h1 class="name">MY NAME IS BETTY BRENDA KARIUKI</h1>
-        <img src="images/scorpion.jpg" alt="A photo of me" height="600px">
+<div class="wrapper">
+    <header role="header">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".navbar-collapse"
+                        role="button">
+                        <span class="sr-only">Toggle Navigation</span>
 
-        <P>so far i have been doing programming languages while learning to code,I have learnt html and css and also using the
-            command line. i have learnt how to use git and github and how to push projects from a local repository to a remote
-            repository,here are some of the links of my projects that are already in github.
-            <br>
-        </P>
-        <a href="https://github.com/beattykariuki/wilcats.git">Read more</a>
-        <a href="https://github.com/beattykariuki/cookie-recipe.git">Read more</a>
-        <p>My name is Betty and I come from a family of two and i am the lastborn in the family of MR/MRS.Kariuki. i finished
-            high school in 2016 and later joined Graphins college where i pursued"Graphics Design".So far i haven't worked
-            in any institution or company to gage my skills and knowledge.I decided to venture into programming because of
-            various reasons;
-        </p>
-        <ol>
-            <li>passion</li>
-            <li>to harness the power of computing in all human endeavour</li>
-            <li>to automate process</li>
-            <li>job market is wide</li>
-        </ol>
+                        <span class="icon-bar"></span>
 
-        <p>Everyone in this world has a hobby/interest,my hobbies include; </p>
-        <ol>
-            <li>swimming</li>
-            <li>socializing</li>
-            <li>listening to music</li>
-            <li>travelling</li>
-        </ol>
+                        <span class="icon-bar"></span>
+
+                        <span class="icon-bar"></span>
+                    </button>
+
+                    <a href="#" class="navbar-brand">Devero</a>
+                </div>
+
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right js-nav">
+                        <li><a href="#home">Home</a></li>
+
+                        <li><a href="#about">About</a></li>
+
+                        <li><a href="#folio">projects</a></li>
+
+                        <li><a href="#testimonials">Skills</a></li>
+
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <section id="home" class="sec-main">
+        <h1 class="main-heading">Betty Brenda Kariuki.</h1>
+        <h2 class="sub-heading">A software developer 
+            with a passion in Art</h2>
+        <!-- <h2 class="sub-heading">My Portfolio</h2> -->
+    </section>
+
+    <section id="about" class="sec-about">
+        <div class="container">
+            <h1>About me</h1>
+
+            <hr />
+
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3">
+                    <p>Hello, my name is Betty Kariuki and I am a Web Designer & Developer. I love crafting
+                        beautiful web pages in HTML5, CSS3 and JavaScript or jQuery. My other skills include 
+                        drawing and painting.
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="services" class="sec-services">
+        <div class="container">
+            <h1>Skills</h1>
+
+            <hr />
+
+            <div class="row">
+                <div class="col-sm-4">
+                    <i class="fa fa-4x fa-paint-brush"></i>
+
+                    <h2 class="h3">JavaScript</h2>
+
+                    <!-- <p>Every website is beautiful, unique and tailored to suit your needs and requirements.</p> -->
+                </div>
+
+                <div class="col-sm-4">
+                    <i class="fa fa-4x fa-code"></i>
+
+                    <h2 class="h3">Python</h2>
+
+                    <!-- <p>All websites are written in valid and clean HTML5 / CSS3 &amp; JavaScript (jQuery).</p> -->
+                </div>
+
+                <div class="col-sm-4">
+                    <i class="fa fa-4x fa-tablet"></i>
+
+                    <h2 class="h3">Css/Html</h2>
+
+                    <!-- <p>All websites are responsive. They will look great on desktop, tablets and mobile phones too.</p> -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="folio" class="sec-folio">
+        <div class="container">
+            <h1>Projects</h1>
+
+            <hr />
+
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="center-block" src="images/galore.png"/>
+                    <p><a href="https://igalore.herokuapp.com/" target="_blank">This application</a></p>
+                </div>
+
+                <div class="col-md-4">
+                    <img class="center-block" src="images/quiz.png"/>
+                </div>
+
+                <div class="col-md-4">
+                    <img class="center-block" src="images/tracker.png"/>
+                </div>
+            </div>
+
+            </div>
+        </div>
+    
+    </section>
+
+    <section id="testimonials" class="sec-testimonials">
+        <!-- <div class="container">
+            <h1>Clients said</h1>
+
+            <hr />
+
+            <div class="row">
+                <div class="col-sm-4">
+                    <p class="text-center">"Alex did great job when designing our website. It was pleasure to work with
+                        him and I'm sure we will hire him again."</p>
+
+                    <p class="text-right">&mdash; Marc Andressen</p>
+                </div>
+
+                <div class="col-sm-4">
+                    <p class="text-center">"Alex proved to be truly creative designer who is able to create just
+                        stunning design I immediately fell in love with!"</p>
+
+                    <p class="text-right">&mdash; Emily Cooper</p>
+                </div>
+
+                <div class="col-sm-4">
+                    <p class="text-center">"I have worked with several different people and it always seemed like a
+                        pain—luckily I found Alex Devero. Thank you Alex!"</p> -->
+
+                    <!-- <p class="text-right">&mdash; Scott Grubber</p> -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="sec-contact">
+        <div class="container">
+            <h1>Contacts</h1>
+
+            <hr />
+
+            <div class="row">
+                <div class="col-sm-4 col-sm-offset-4">
+                    <form class="center-block" action="#" method="post">
+                        <div class="form-group">
+                            <label class="sr-only" for="inputName">Full name</label>
+
+                            <input id="inputName" class="form-control" type="text" placeholder="Betty Kariuki" required />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputMail" class="sr-only">Email Address</label>
+
+                            <input id="inputMail" class="form-control" type="email" placeholder="bettykariuki@gmail.com"
+                                required />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputMessage" class="sr-only">Your Message</label>
+
+                            <textarea id="inputMessage" class="form-control" name="message" cols="30" rows="8" required></textarea>
+                        </div>
+
+                        <div class="form-group">
+                            <button class="btn btn-default center-block" type="submit" value="Hire me">Hire me</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="footer">
+        <div class="container">
+            <ul class="soc-media-ul">
+                <li>
+                    <a href="https://twitter.com/AlexDevero" class="fa fa-twitter" target="_blank"></a>
+                </li>
+
+                <li>
+                    <a href="https://plus.google.com/u/0/+AlexDevero" class="fa fa-google-plus" target="_blank"></a>
+                </li>
+
+                <li>
+                    <a href="https://cz.linkedin.com/pub/alex-devero/38/262/70/" class="fa fa-linkedin" target="_blank"></a>
+                </li>
+
+                <li>
+                    <a href="https://www.behance.net/d3v3r0" class="fa fa-behance" target="_blank"></a>
+                </li>
+
+                <li>
+                    <a href="mailto:example@mail.com" class="fa fa-envelope"></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </body>
-
 </html>
