--- a/index.html
+++ b/index.html
@@ -14,34 +14,28 @@
 <body>
 <div class="wrapper">
     <header role="header">
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
             <div class="container">
-                <div class="navbar-header">
-                    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".navbar-collapse"
-                        role="button">
-                        <span class="sr-only">Toggle Navigation</span>
-
-                        <span class="icon-bar"></span>
-
-                        <span class="icon-bar"></span>
-
-                        <span class="icon-bar"></span>
-                    </button>
-
-                    <a href="#" class="navbar-brand">Devero</a>
-                </div>
-
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right js-nav">
-                        <li><a href="#home">Home</a></li>
-
-                        <li><a href="#about">About</a></li>
-
-                        <li><a href="#folio">Projects</a></li>
-
-                        <li><a href="#testimonials">Skills</a></li>
-
-                        <li><a href="#contact">Contact</a></li>
+                <a href="index.html" class="navbar-brand js-scroll-trigger" onclick="window.scrollTop = 0;">Betty Kariuki</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto text-center">
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+                        </li>
+        
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -70,7 +64,7 @@
             </div>
         </div>
     </section>
-    <section id="services" class="sec-services">
+    <section id="skills" class="sec-services">
         <div class="container">
             <h1>Skills</h1>
 
@@ -115,35 +109,52 @@
         </div>
     </section>
 
-    <section id="folio" class="sec-folio">
+    <section id="projects" class="sec-folio">
         <div class="container">
             <h1>Projects</h1>
 
             <hr />
+                                <p><a href="https://igalore.herokuapp.com/" target="_blank">This application</a></p>
+                    <!-- <img class="center-block" src="images/quiz.png" /> -->
+                    <!-- <img class="center-block" src="images/tracker.png" /> -->
 
-            <div class="row">
-                <div class="card">
-                <div class="col-sm-4">
-                    <img class="center-block" src="images/galore.png"/>
-                    <p><a href="https://igalore.herokuapp.com/" target="_blank">This application</a></p>
-                </div>
-                </div>
-
-                <div class="card">
-
-                <div class="col-sm-4">
-                    <img class="center-block" src="images/quiz.png"/>
-                </div>
-                </div>
-
-                <div class="col-md-4">
-                    <img class="center-block" src="images/tracker.png"/>
-                </div>
-            </div>
-
+<div class="row">
+    <div class="col-sm-4">
+        <div class="card h-100">
+            <div class="card-body">
+            <a href="https://igalore.herokuapp.com/" target="_blank"><img src="images/galore.png"></a>
+                <h5 class="card-title">Image Gallery</h5>
+                <p class="card-text">This is a web application whereby one can upload photos and also view photos of different categories</p>
+                <a href="https://igalore.herokuapp.com/" target="_blank" class="btn btn-primary">View Project</a>
             </div>
         </div>
-    
+    </div>
+
+    <div class="col-sm-4">
+        <div class="card h-100">
+            <div class="card-body">
+                <a href="https://beattykariuki.github.io/Quiz-project/" target="_blank"><img src="images/quiz.png"></a>
+                <h5 class="card-title">Quiz Board</h5>
+                <p class="card-text">A Javasscript quiz that makes it interesting and memorable for new JavaScript students to test their knowledge on the
+                subject.</p>
+            <a href="https://beattykariuki.github.io/Quiz-project/" class="btn btn-primary">View Project</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-4">
+        <div class="card h-100 ">
+            <div class="card-body">
+                <a href="https://beattykariuki.github.io/Triangle-project/" target="_blank"><img src="images/tracker.png">aaaaaaaaaaa</a>
+                <h5 class="card-title">Triangle Tracker</h5>
+                <p class="card-text">An application whereby one is able to calculate the sides of a triangle.</p>
+                <a href="https://beattykariuki.github.io/Triangle-project/" class="btn btn-primary">View Project</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
     </section>
 
     <section id="testimonials" class="sec-testimonials">
